[package]
name = "slippery-iter"
description = "Easy to use abstinential (slippery), N-peekable and rewindable wrapper over an iterator. (Nightly Rust)"
authors = ["Dimitriy \"ay0ks\" <ay0o0ks000@gmail.com>"]
repository = "https://github.com/ay0ks/slippery-iter"
license = "MIT"
readme = "README"
version = "0.1.1"
edition = "2021"

[dependencies]
